retrieveUnpackaged/objects/Canteen_admin__c.object
<CustomObject>
    <fields>
        <fullName>EmailId__c</fullName>
        <label>EmailId</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Orders__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orders</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Canteen Manager</relationshipLabel>
        <relationshipName>Canteen_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_no__c</fullName>
        <label>Phone no</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Status_of_food__c</fullName>
        <label>Status of food</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to deliver</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Not Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_amount_to_be_paid__c</fullName>
        <label>Total amount to be paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Canteen Manager</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Canteen admin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Canteen Manager</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>